2006-06-01  Marc Singer  <elf@buici.com>

	* src/drivers-lh/drv-mmc.c: Added proper configuration checks for
	the companion relocation.

	* Many changes to the environment handling so that the environment
	is present, and usable, even if the commands to manipulate it are
	not.

	* src/apex/cmd-env.c: Fixed a stupid error in the environment
	command code that required the setenv command in order to use the
	printenv command.

2006-05-29  Marc Singer  <elf@buici.com>

	* src/drivers/drv-ext2.c (ext2_info): Fixed the way that
	partitions are detected so that changing partitions will properly
	flush cached information about the filesystem.

2006-05-28  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): Rolled to 1.3.25 for the MMC driver fixes.

	* src/arch-arm/entry/apex.lds.S: The bootstrap data location is
	properly calculated.

	* src/drivers-lh/drv-mmc.c: MMC driver can read multiple blocks.
	Well, two to be precise, but at least we know it works.  The
	status returned from wait_for_status it more than 16 bits because
	of the timeout.  All of the reference to status are widened to
	int's to make this easier.
	(execute_command): Default wait_for status is not better tuned to
	the command being executed.  The driver gets a nice, smooth data
	stream from the card.

2006-05-27  Marc Singer  <elf@cerise.buici.com>

	* Makefile (SUBLEVEL): New sub-level for the companion changes.
	This will roll to a new patchlevel when we get the drivers going
	for sure.

	* src/mach-lh7a40x/relocate-companion.c: relocate-apex ()
	implementation for the synapse companion.

	* src/arch-arm/Kconfig: Added more configuration options for
	compiler optimizations.

	* src/drivers-lh/drv-i2c.c: i2c driver for reading/writing
	EEPROM.

	* src/drivers-lh/drv-mmc.c: Mmc driver, SD capable, bootstrap
	capable

	* include/mmc.h: Factored out the mmc header for the sake of
	relocation from SD/MMC.

	* src/arch-arm/entry/apex.lds.S: Special section for bootstrap
	stack and bootstrap data.
